--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Antonio&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Antonio&family=Spartan&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -14,6 +14,37 @@ html body {
   height: 100%;
   width: 100%;
   background-color: #070724;
+  font-family: Spartan;
+  font-size: 20px;
+  color: #fff;
+}
+
+h1,
+h2 {
+  font-family: Antonio;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: 80px;
+}
+
+h2 {
+  font-size: 40px;
+  letter-spacing: -1.5;
+}
+
+h3,
+h4 {
+  font-family: Spartan;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-size: 12px;
+  line-height: 25px;
+  letter-spacing: 2.6px;
 }
 
 .nav-bar {
@@ -28,7 +59,6 @@ html body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-family: Antonio;
   color: #fff;
   padding: 1em;
 }
@@ -45,10 +75,114 @@ html body {
       -ms-flex-align: center;
           align-items: center;
   gap: 1em;
+  font-family: Spartan;
 }
 
 .nav-bar .nav-menu a {
   text-decoration: none;
   color: #fff;
+}
+
+.planet {
+  max-width: 1600px;
+  width: 95%;
+  margin: 0 auto;
+}
+
+.planet .planet-data {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.planet .planet-data .img-container {
+  width: 70%;
+  height: calc(-webkit-min-content + 100px);
+  height: calc(-moz-min-content + 100px);
+  height: calc(min-content + 100px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+
+.planet .planet-data .img-container .planet-geology {
+  position: absolute;
+  bottom: 0;
+  width: 20%;
+}
+
+.planet .planet-data .planet-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 30%;
+}
+
+.planet .planet-data .planet-info .planet-name {
+  font-family: Antonio;
+}
+
+.planet .planet-data .planet-info .planet-overview,
+.planet .planet-data .planet-info .source,
+.planet .planet-data .planet-info .button {
+  font-family: Spartan;
+}
+
+.planet .planet-data .planet-info .planet-overview {
+  line-height: 1.5em;
+}
+
+.planet .planet-data .planet-info .button {
+  border: 1px solid #38384f;
+  padding: 1em;
+  margin: 0.5em 0;
+}
+
+.planet .planet-data .planet-info .button span {
+  font-weight: bold;
+  margin-left: 1em;
+}
+
+.planet-stats {
+  margin-top: 3em;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.planet-stats .stat-window {
+  border: 1px solid #38384f;
+  padding: 1em 7em 1em 1em;
+}
+
+.planet-stats .stat-window p {
+  font-size: 12px;
+  color: #838391;
 }
 /*# sourceMappingURL=main.css.map */
