--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Antonio&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Antonio&family=Spartan&display=swap");
 
 * {
   box-sizing: border-box;
@@ -12,9 +12,37 @@ html {
     height: 100%;
     width: 100%;
     background-color: #070724;
+    font-family: Spartan;
+    font-size: 20px;
+    color: #fff;
   }
 }
+h1,
+h2 {
+  font-family: Antonio;
+  text-transform: uppercase;
+}
 
+h1 {
+  font-size: 80px;
+}
+
+h2 {
+  font-size: 40px;
+  letter-spacing: -1.5;
+}
+
+h3,
+h4 {
+  font-family: Spartan;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+h3 {
+  font-size: 12px;
+  line-height: 25px;
+  letter-spacing: 2.6px;
+}
 //Navbar
 
 .nav-bar {
@@ -23,7 +51,6 @@ html {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: Antonio;
   color: #fff;
   padding: 1em;
 
@@ -34,10 +61,84 @@ html {
     display: flex;
     align-items: center;
     gap: 1em;
+    font-family: Spartan;
 
     a {
       text-decoration: none;
       color: #fff;
+    }
+  }
+}
+
+//Planet Info
+.planet {
+  max-width: 1600px;
+  width: 95%;
+  margin: 0 auto;
+
+  .planet-data {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    .img-container {
+      width: 70%;
+      height: calc(min-content + 100px);
+      display: flex;
+      justify-content: center;
+      position: relative;
+      .planet-geology {
+        position: absolute;
+        bottom: 0;
+        width: 20%;
+      }
+    }
+    .planet-info {
+      display: flex;
+      flex-direction: column;
+      width: 30%;
+
+      .planet-name {
+        font-family: Antonio;
+      }
+
+      .planet-overview,
+      .source,
+      .button {
+        font-family: Spartan;
+      }
+
+      .planet-overview {
+        line-height: 1.5em;
+      }
+
+      .button {
+        border: 1px solid #38384f;
+        padding: 1em;
+        margin: 0.5em 0;
+        span {
+          font-weight: bold;
+          margin-left: 1em;
+        }
+      }
+    }
+  }
+}
+
+.planet-stats {
+  margin-top: 3em;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  .stat-window {
+    border: 1px solid #38384f;
+    padding: 1em 7em 1em 1em;
+    p {
+      font-size: 12px;
+      color: #838391;
     }
   }
 }
