Connect links to other planets in nav bar

--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -107,21 +107,24 @@ h3 {
 
 .planet .planet-data .img-container {
   width: 70%;
-  height: calc(-webkit-min-content + 100px);
-  height: calc(-moz-min-content + 100px);
-  height: calc(min-content + 100px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
 }
 
 .planet .planet-data .img-container .planet-geology {
   position: absolute;
-  bottom: 0;
   width: 20%;
 }
 
@@ -134,10 +137,6 @@ h3 {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 30%;
-}
-
-.planet .planet-data .planet-info .planet-name {
-  font-family: Antonio;
 }
 
 .planet .planet-data .planet-info .planet-overview,
@@ -154,6 +153,11 @@ h3 {
   border: 1px solid #38384f;
   padding: 1em;
   margin: 0.5em 0;
+}
+
+.planet .planet-data .planet-info .button:hover {
+  background-color: #38384f;
+  cursor: pointer;
 }
 
 .planet .planet-data .planet-info .button span {
