--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -84,13 +84,14 @@ h3 {
 
     .img-container {
       width: 70%;
-      height: calc(min-content + 100px);
       display: flex;
+      flex-direction: column;
       justify-content: center;
+      align-items: center;
       position: relative;
+
       .planet-geology {
         position: absolute;
-        bottom: 0;
         width: 20%;
       }
     }
@@ -98,10 +99,6 @@ h3 {
       display: flex;
       flex-direction: column;
       width: 30%;
-
-      .planet-name {
-        font-family: Antonio;
-      }
 
       .planet-overview,
       .source,
@@ -117,6 +114,10 @@ h3 {
         border: 1px solid #38384f;
         padding: 1em;
         margin: 0.5em 0;
+        &:hover {
+          background-color: #38384f;
+          cursor: pointer;
+        }
         span {
           font-weight: bold;
           margin-left: 1em;
