--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -15,7 +15,7 @@ html body {
   width: 100%;
   background-color: #070724;
   font-family: Spartan;
-  font-size: 20px;
+  font-size: 14px;
   color: #fff;
 }
 
@@ -76,6 +76,7 @@ h3 {
           align-items: center;
   gap: 1em;
   font-family: Spartan;
+  text-transform: uppercase;
 }
 
 .nav-bar .nav-menu a {
@@ -149,20 +150,41 @@ h3 {
   line-height: 1.5em;
 }
 
-.planet .planet-data .planet-info .button {
-  border: 1px solid #38384f;
-  padding: 1em;
-  margin: 0.5em 0;
+.planet .planet-data .planet-info .button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.planet .planet-data .planet-info .button:hover {
+.planet .planet-data .planet-info .button-container .button {
+  width: 100%;
+  border: 1px solid #38384f;
+  padding: 0.5em;
+  margin: 0.5em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1em;
+}
+
+.planet .planet-data .planet-info .button-container .button:hover {
   background-color: #38384f;
   cursor: pointer;
 }
 
-.planet .planet-data .planet-info .button span {
+.planet .planet-data .planet-info .button-container .button p {
   font-weight: bold;
-  margin-left: 1em;
 }
 
 .planet-stats {
@@ -182,11 +204,79 @@ h3 {
 
 .planet-stats .stat-window {
   border: 1px solid #38384f;
-  padding: 1em 7em 1em 1em;
+  padding: 0 3em 0 1em;
 }
 
 .planet-stats .stat-window p {
   font-size: 12px;
   color: #838391;
+}
+
+@media (max-width: 1000px) {
+  .nav-bar {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 0.5em;
+    margin-bottom: 1em;
+  }
+  .planet .planet-data {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+  }
+  .planet .planet-data .planet-info {
+    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .planet .planet-data .planet-info .info-container {
+    width: 50%;
+  }
+  .planet .planet-data .planet-info .button-container {
+    width: 40%;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+}
+
+@media (max-width: 400px) {
+  .planet .planet-data .img-container img {
+    width: 100%;
+  }
+  .planet .planet-data .planet-info {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .planet .planet-data .planet-info .info-container {
+    width: 100%;
+  }
+  .planet .planet-data .planet-info .info-container .planet-name,
+  .planet .planet-data .planet-info .info-container .planet-overview {
+    text-align: center;
+  }
+  .planet-stats {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .planet-stats .stat-window {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
