--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -13,7 +13,7 @@ html body {
   padding: 0;
   height: 100%;
   width: 100%;
-  background: #070724 url("./images/stars.png");
+  background: #070724 url("./images/background-stars.svg");
   font-family: Spartan;
   font-size: 14px;
   color: #fff;
@@ -31,7 +31,6 @@ h1 {
 
 h2 {
   font-size: 40px;
-  letter-spacing: -1.5;
 }
 
 h3,
@@ -48,6 +47,8 @@ h3 {
 }
 
 .nav-bar {
+  max-width: 1600px;
+  margin: 0 auto;
   width: 100%;
   border-bottom: 1px solid #38384f;
   display: -webkit-box;
@@ -88,7 +89,25 @@ h3 {
   color: #fff;
 }
 
+footer {
+  max-width: 1600px;
+  margin: 1em auto;
+  width: 100%;
+  bottom: 0;
+  border-top: 1px solid #38384f;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .planet {
+  min-height: calc(100vh - 130px);
   max-width: 1600px;
   width: 95%;
   margin: 0 auto;
@@ -125,11 +144,16 @@ h3 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
+}
+
+.planet .planet-data .img-container img {
+  -webkit-transition: all ease 0.5s;
+  transition: all ease 0.5s;
 }
 
 .planet .planet-data .img-container .planet-geology {
-  position: absolute;
+  position: relative;
+  bottom: 20;
   width: 20%;
 }
 
@@ -180,6 +204,8 @@ h3 {
       -ms-flex-align: center;
           align-items: center;
   gap: 1em;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .planet .planet-data .planet-info .button-container .button:hover {
@@ -209,6 +235,10 @@ h3 {
 .planet-stats .stat-window {
   border: 1px solid #38384f;
   padding: 0 3em 0 1em;
+}
+
+.planet-stats .stat-window h2 {
+  margin: 0;
 }
 
 .planet-stats .stat-window p {
@@ -275,9 +305,9 @@ h3 {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 100%;
-    height: 500px;
-    position: absolute;
-    top: 80px;
+    height: 800px;
+    position: fixed;
+    top: 85px;
     left: -100%;
     opacity: 1;
     -webkit-transition: all 0.5s ease;
@@ -290,9 +320,20 @@ h3 {
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
     z-index: 1;
+    overflow: hidden;
   }
   .nav-bar .menu-icon {
     display: block;
+  }
+  .planet-stats {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1em;
+  }
+  .planet-stats .stat-window {
+    width: 100%;
   }
 }
 
@@ -313,15 +354,6 @@ h3 {
   .planet .planet-data .planet-info .info-container .planet-name,
   .planet .planet-data .planet-info .info-container .planet-overview {
     text-align: center;
-  }
-  .planet-stats {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .planet-stats .stat-window {
-    width: 100%;
   }
 }
 /*# sourceMappingURL=main.css.map */
