--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,7 @@ html {
     height: 100%;
     width: 100%;
     //background-color: #070724;
-    background: #070724 url("./images/stars.png");
+    background: #070724 url("./images/background-stars.svg");
     font-family: Spartan;
     font-size: 14px;
     color: #fff;
@@ -30,7 +30,6 @@ h1 {
 
 h2 {
   font-size: 40px;
-  letter-spacing: -1.5;
 }
 
 h3,
@@ -47,6 +46,8 @@ h3 {
 //Navbar
 
 .nav-bar {
+  max-width: 1600px;
+  margin: 0 auto;
   width: 100%;
   border-bottom: 1px solid #38384f;
   display: flex;
@@ -74,9 +75,21 @@ h3 {
     }
   }
 }
+//Footer
+footer {
+  max-width: 1600px;
+  margin: 1em auto;
+  width: 100%;
+  bottom: 0;
+  border-top: 1px solid #38384f;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
 //Planet Info
 .planet {
+  min-height: calc(100vh - 130px);
   max-width: 1600px;
   width: 95%;
   margin: 0 auto;
@@ -93,10 +106,14 @@ h3 {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      position: relative;
+      //position: relative;
+      img {
+        transition: all ease 0.5s;
+      }
 
       .planet-geology {
-        position: absolute;
+        position: relative;
+        bottom: 20;
         width: 20%;
       }
     }
@@ -127,6 +144,7 @@ h3 {
           flex-direction: row;
           align-items: center;
           gap: 1em;
+          transition: all 0.5s ease;
           &:hover {
             background-color: #38384f;
             cursor: pointer;
@@ -150,6 +168,9 @@ h3 {
   .stat-window {
     border: 1px solid #38384f;
     padding: 0 3em 0 1em;
+    h2 {
+      margin: 0;
+    }
     p {
       font-size: 12px;
       color: #838391;
@@ -198,9 +219,9 @@ h3 {
     .nav-menu {
       flex-direction: column;
       width: 100%;
-      height: 500px;
-      position: absolute;
-      top: 80px;
+      height: 800px;
+      position: fixed;
+      top: 85px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
@@ -211,9 +232,17 @@ h3 {
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
+      overflow: hidden;
     }
     .menu-icon {
       display: block;
+    }
+  }
+  .planet-stats {
+    flex-direction: column;
+    gap: 1em;
+    .stat-window {
+      width: 100%;
     }
   }
 }
@@ -237,13 +266,6 @@ h3 {
           }
         }
       }
-    }
-  }
-
-  .planet-stats {
-    flex-direction: column;
-    .stat-window {
-      width: 100%;
     }
   }
 }
