--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -47,10 +47,14 @@ h3 {
 }
 
 .nav-bar {
+  width: 100%;
+  border-bottom: 1px solid #38384f;
+}
+
+.nav-bar .nav-content {
   max-width: 1600px;
   margin: 0 auto;
   width: 100%;
-  border-bottom: 1px solid #38384f;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -64,15 +68,15 @@ h3 {
   padding: 1em;
 }
 
-.nav-bar .menu-icon {
+.nav-bar .nav-content .menu-icon {
   display: none;
 }
 
-.nav-bar .nav-title {
+.nav-bar .nav-content .nav-title {
   margin: 0;
 }
 
-.nav-bar .nav-menu {
+.nav-bar .nav-content .nav-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -84,17 +88,22 @@ h3 {
   text-transform: uppercase;
 }
 
-.nav-bar .nav-menu a {
+.nav-bar .nav-content .nav-menu a {
   text-decoration: none;
   color: #fff;
 }
 
 footer {
+  width: 100%;
+  border-top: 1px solid #38384f;
+}
+
+footer .footer-content {
   max-width: 1600px;
   margin: 1em auto;
+  padding: 0.5em;
   width: 100%;
   bottom: 0;
-  border-top: 1px solid #38384f;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -111,6 +120,8 @@ footer {
   max-width: 1600px;
   width: 95%;
   margin: 0 auto;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .planet .planet-data {
@@ -144,6 +155,8 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: all ease 0.5s;
+  transition: all ease 0.5s;
 }
 
 .planet .planet-data .img-container img {
@@ -152,9 +165,8 @@ footer {
 }
 
 .planet .planet-data .img-container .planet-geology {
-  position: relative;
-  bottom: 20;
-  width: 20%;
+  margin-top: -60px;
+  width: 15%;
 }
 
 .planet .planet-data .planet-info {
@@ -172,6 +184,15 @@ footer {
 .planet .planet-data .planet-info .source,
 .planet .planet-data .planet-info .button {
   font-family: Spartan;
+}
+
+.planet .planet-data .planet-info .source {
+  color: #838391;
+}
+
+.planet .planet-data .planet-info .source a {
+  text-decoration: none;
+  color: #838391;
 }
 
 .planet .planet-data .planet-info .planet-overview {
@@ -217,6 +238,10 @@ footer {
   font-weight: bold;
 }
 
+.planet .button-container-mobile {
+  display: none;
+}
+
 .planet-stats {
   margin-top: 3em;
   width: 100%;
@@ -247,7 +272,7 @@ footer {
 }
 
 @media screen and (max-width: 1000px) {
-  .nav-bar {
+  .nav-content {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -261,8 +286,8 @@ footer {
         -ms-flex-direction: column !important;
             flex-direction: column !important;
   }
-  .planet .planet-data .img-container img {
-    width: 100%;
+  .planet .planet-data .img-container .planet-geology {
+    width: 30%;
   }
   .planet .planet-data .planet-info {
     width: 100%;
@@ -289,7 +314,7 @@ footer {
 }
 
 @media screen and (max-width: 600px) {
-  .nav-bar {
+  .nav-content {
     position: relative;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -299,7 +324,7 @@ footer {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  .nav-bar .nav-menu {
+  .nav-content .nav-menu {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -313,7 +338,7 @@ footer {
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
   }
-  .nav-bar .active {
+  .nav-content .active {
     background: #070724;
     left: 0;
     opacity: 1;
@@ -322,8 +347,8 @@ footer {
     z-index: 1;
     overflow: hidden;
   }
-  .nav-bar .menu-icon {
-    display: block;
+  .nav-content .menu-icon {
+    display: block !important;
   }
   .planet-stats {
     -webkit-box-orient: vertical;
@@ -337,7 +362,19 @@ footer {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 485px) {
+  .planet {
+    margin-top: 0;
+  }
+  .planet .planet-data {
+    margin-top: 2em;
+  }
+  .planet .planet-data .info-container .source {
+    text-align: center;
+  }
+  .planet .planet-data .img-container .planet-geology {
+    width: 50%;
+  }
   .planet .planet-data .img-container img {
     width: 100%;
   }
@@ -354,6 +391,27 @@ footer {
   .planet .planet-data .planet-info .info-container .planet-name,
   .planet .planet-data .planet-info .info-container .planet-overview {
     text-align: center;
+  }
+  .planet .button-container {
+    display: none !important;
+  }
+  .planet .button-container-mobile {
+    border-bottom: 1px solid #38384f;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
   }
 }
 /*# sourceMappingURL=main.css.map */
