--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -88,6 +88,10 @@ h3 {
   text-transform: uppercase;
 }
 
+.nav-bar .nav-content .nav-menu .mobile-nav {
+  display: none;
+}
+
 .nav-bar .nav-content .nav-menu a {
   text-decoration: none;
   color: #fff;
@@ -329,6 +333,13 @@ footer .footer-content a:hover {
 
 @media screen and (max-width: 600px) {
   .nav-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: relative;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -344,14 +355,13 @@ footer .footer-content a:hover {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 100%;
-    height: 800px;
+    height: 100vh;
     position: fixed;
-    top: 85px;
+    top: 0;
     left: -100%;
     opacity: 1;
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
-    overflow: scroll;
   }
   .nav-content .nav-menu a {
     width: 100%;
@@ -378,7 +388,23 @@ footer .footer-content a:hover {
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
     z-index: 1;
-    overflow: hidden;
+  }
+  .nav-content .active .mobile-nav {
+    padding: 14px;
+    width: 100%;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .nav-content .menu-icon {
     display: block !important;
