--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -70,6 +70,9 @@ h3 {
       gap: 1em;
       font-family: Spartan;
       text-transform: uppercase;
+      .mobile-nav {
+        display: none;
+      }
 
       a {
         text-decoration: none;
@@ -221,9 +224,6 @@ footer {
       flex-direction: column !important;
 
       .img-container {
-        img {
-          //width: 100%;
-        }
         .planet-geology {
           width: 30%;
         }
@@ -247,19 +247,21 @@ footer {
 
 @media screen and (max-width: 600px) {
   .nav-content {
+    display: flex;
+    width: 100%;
+    align-items: center;
     position: relative;
     flex-direction: row;
     justify-content: space-between;
     .nav-menu {
       flex-direction: column;
       width: 100%;
-      height: 800px;
+      height: 100vh;
       position: fixed;
-      top: 85px;
+      top: 0;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
-      overflow: scroll;
       a {
         width: 100%;
         padding: 1em;
@@ -281,7 +283,14 @@ footer {
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
-      overflow: hidden;
+      .mobile-nav {
+        padding: 14px;
+        width: 100%;
+        display: flex !important;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+      }
     }
     .menu-icon {
       display: block !important;
