--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -97,6 +97,11 @@ h3 {
   color: #fff;
 }
 
+.nav-bar .nav-content .nav-menu a:focus {
+  border: 5px solid #fff;
+  padding: 1em;
+}
+
 .nav-bar .nav-content .nav-menu a .nav-indicator {
   display: none;
 }
@@ -133,6 +138,19 @@ footer .footer-content a:hover {
 }
 
 .planet {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   min-height: calc(100vh - 130px);
   max-width: 1600px;
   width: 95%;
@@ -230,6 +248,7 @@ footer .footer-content a:hover {
   width: 100%;
   border: 1px solid #38384f;
   padding: 0.5em;
+  color: #fff;
   margin: 0.5em 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -455,6 +474,7 @@ footer .footer-content a:hover {
     display: none !important;
   }
   .planet .button-container-mobile {
+    width: 100%;
     border-bottom: 1px solid #38384f;
     text-transform: uppercase;
     font-size: 14px;
