--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -77,6 +77,10 @@ h3 {
       a {
         text-decoration: none;
         color: #fff;
+        &:focus {
+          border: 5px solid #fff;
+          padding: 1em;
+        }
         .nav-indicator {
           display: none;
         }
@@ -109,6 +113,10 @@ footer {
 
 //Planet Info
 .planet {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   min-height: calc(100vh - 130px);
   max-width: 1600px;
   width: 95%;
@@ -168,6 +176,7 @@ footer {
           width: 100%;
           border: 1px solid #38384f;
           padding: 0.5em;
+          color: #fff;
           margin: 0.5em 0;
           display: flex;
           flex-direction: row;
@@ -339,6 +348,7 @@ footer {
       display: none !important;
     }
     .button-container-mobile {
+      width: 100%;
       border-bottom: 1px solid #38384f;
       text-transform: uppercase;
       font-size: 14px;
